[project]
name = "rcan"
version = "0.1.0"
description = "Residual Channel Attention Network using PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "safetensors>=0.7.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
]
